--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -27,7 +27,7 @@ block content
       .cards__column
         .cards__item
           .cards__calendar.js-cards__calendar
-            +date-dropdown({ label1: 'прибытие' })
+            +date-dropdown([{ label1: 'прибытие' }])
         .cards__item.cards__item_size_s
           +room-card({ luxury: true, number: 888, price: '9 900₽', star: 5, reviews: 145, images: ['room-1.jpg', 'room-2.jpg', 'room-1.jpg', 'room-2.jpg',] })
         .cards__item.cards__item_size_s
