fix undefined class #12

--- a/src/components/button/button.pug
+++ b/src/components/button/button.pug
@@ -1,6 +1,6 @@
 mixin button(options)
   -
-    const { color = null, tag, text, href, size, submit = false } = options
+    const { color = null, tag = 'button', text, href, size, submit = false } = options
     const themes = {
       'white': 'button_theme_white',
       'blue': 'button_theme_blue',
@@ -16,6 +16,6 @@ mixin button(options)
 
     const isSubmit = submit ? 'submit' : 'button'
     const buttonType = tag === 'button' ? isSubmit : false
-    const classes = `button ${themes[color]} ${sizes[size]}`
+    const classes = `button ${[themes[color]]} ${[sizes[size]]}`
 
   #{tag}(class=classes, type=buttonType, href=href)= text
