--- a/src/components/color-example/color-example.pug
+++ b/src/components/color-example/color-example.pug
@@ -1,6 +1,6 @@
 mixin color-example({ code, color})
   -
-    const classes = {
+    const colorModifiers = {
       'Dark Shade 100%': 'color-example_color_dark-100',
       'Dark Shade 75%': 'color-example_color_dark-75',
       'Dark Shade 50%': 'color-example_color_dark-50',
@@ -9,7 +9,10 @@ mixin color-example({ code, color})
       'Purple': 'color-example_color_purple',
       'Green': 'color-example_color_green',
     }
+
+    const classes = [colorModifiers[color]]
+
   .color-example
-    .color-example__preview(class=`${classes[color]}`)
+    .color-example__preview(class=`${classes}`)
     .color-example__name= color
     .color-example__code= code
