--- a/src/components/review/review.pug
+++ b/src/components/review/review.pug
@@ -1,6 +1,6 @@
 include /components/button-like/button-like
 mixin review(obj)
-  - const { src, name, time, comment, likes, liked } = obj;
+  - const { src, name, time, comment, likes, withLike } = obj;
   .review.js-review
     img.review__img(src=src, alt="ava")
     .review__author
@@ -9,6 +9,6 @@ mixin review(obj)
       time.review__time
         = time
     .review__button
-      +button-like(likes, liked)
+      +button-like(likes, withLike)
     p.review__comment
       != comment
