--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -21,7 +21,7 @@ block content
           +registration-form
       .cards__column
         .cards__item
-          +reservation-form({ luxury: true, room: 888, price: '9 990', discount: '2&nbsp;179', additionalService: '300' })
+          +reservation-form({ isLuxury: true, room: 888, price: '9 990', discount: '2&nbsp;179', additionalService: '300' })
         .cards__item
           +login-form
       .cards__column
@@ -29,6 +29,6 @@ block content
           .cards__calendar.js-cards__calendar
             +date-dropdown([{ label1: 'прибытие' }])
         .cards__item.cards__item_size_s
-          +room-card({ luxury: true, number: 888, price: '9 900₽', star: 5, reviews: 145, images: ['room-1.jpg', 'room-2.jpg', 'room-1.jpg', 'room-2.jpg',] })
+          +room-card({ isLuxury: true, number: 888, price: '9 900₽', star: 5, reviews: 145, images: ['room-1.jpg', 'room-2.jpg', 'room-1.jpg', 'room-2.jpg',] })
         .cards__item.cards__item_size_s
-          +room-card({ luxury: false, number: 840, price: '9 900₽', star: 4, reviews: 65, images: ['room-2.jpg', 'room-1.jpg', 'room-2.jpg', 'room-1.jpg',] })
+          +room-card({ number: 840, price: '9 900₽', star: 4, reviews: 65, images: ['room-2.jpg', 'room-1.jpg', 'room-2.jpg', 'room-1.jpg',] })
