--- a/src/pages/room-details/room-details.pug
+++ b/src/pages/room-details/room-details.pug
@@ -13,7 +13,7 @@ block variables
         name: 'Мурад Сарафанов',
         src: require('/src/assets/img/review/4el.jpg'),
         time: '5 дней назад',
-        likes: '12', liked: true,
+        likes: '12', withLike: true,
         comment: 'Великолепный матрас на&nbsp;кровати в&nbsp;основной спальне! А&nbsp;пуфик вообще потрясающий. И&nbsp;стены, действительно, шумоподавляющие. Выкрикивал комплименты повару&nbsp;&mdash; никто не&nbsp;жаловался из&nbsp;соседей.'},
       {
         name: 'Патрисия Стёклышкова',
@@ -74,4 +74,4 @@ block content
             | Бесплатная отмена в течение 48 ч. После этого при отмене не
             | позднее чем за 5 дн. до прибытия вы получите полный возврат за вычетом сбора за услуги.
         .room-details__reservation
-          +reservation-form({ luxury: true, room: 888, price: '9&nbsp;990', discount: '2&nbsp;179', additionalService: '300' })
+          +reservation-form({ isLuxury: true, room: 888, price: '9&nbsp;990', discount: '2&nbsp;179', additionalService: '300' })
