--- a/src/components/pagination/pagination.pug
+++ b/src/components/pagination/pagination.pug
@@ -10,11 +10,12 @@ mixin pagination
   .pagination
     ul.pagination__list
       each link in links
-        li.pagination__item(class=link.active && "pagination__item_active")
+        - const {active, pageNum} = link;
+        li.pagination__item(class=active && "pagination__item_active")
           if link.pageNum === '...'
-            span.pagination__link= link.pageNum
+            span.pagination__link= pageNum
           else
-            a.pagination__link(class=link.active && "pagination__link_active", href="/mock-link")= link.pageNum
+            a.pagination__link(class=active && "pagination__link_active", href="/mock-link")= pageNum
       li.pagination__item
         a.pagination__link.pagination__link_arrow_next(href="/mock-link") arrow_forward
     p.pagination__text 1 – 12 из 100+ вариантов аренды
