--- a/src/pages/registration/registration.pug
+++ b/src/pages/registration/registration.pug
@@ -3,6 +3,7 @@ include /components/registration-form/registration-form
 block variables
   - const title = "Регистрация";
 block content
-  .registration
-    .registration__form
-      +registration-form
+  .registration__wrapper
+    .registration
+      .registration__form
+        +registration-form
