--- a/src/pages/room-details/room-details.scss
+++ b/src/pages/room-details/room-details.scss
@@ -1,5 +1,9 @@
 .room-details {
-  margin-bottom: 75px;
+
+  &__wrapper {
+    width: 100%;
+    margin-bottom: 75px;
+  }
 
   &__pictures {
     display: grid;
