--- a/src/pages/sign-in/sign-in.pug
+++ b/src/pages/sign-in/sign-in.pug
@@ -3,6 +3,7 @@ include /components/login-form/login-form
 block variables
   - const title = "Вход";
 block content
-  .sign-in
-    .sign-in__form
-      +login-form
+  .sign-in__wrapper
+    .sign-in
+      .sign-in__form
+        +login-form
