--- a/src/pages/form-elements/form-elements.scss
+++ b/src/pages/form-elements/form-elements.scss
@@ -1,5 +1,4 @@
 .form-elements {
-  margin-bottom: 50px;
   background-color: #fff;
 
   &__header {
@@ -9,10 +8,11 @@
   }
 
   &__wrapper {
+    width: 100%;
     display: flex;
     flex-direction: column;
     max-width: 1160px;
-    margin: 0 auto;
+    margin: 0 auto 50px;
   }
 
   &__row {
