--- a/src/pages/landing-page/landing-page.pug
+++ b/src/pages/landing-page/landing-page.pug
@@ -3,7 +3,8 @@ include /components/search-form/search-form
 block variables
   - const title = "Toxin - Главная";
 block content
-  .landing-page
-    .landing-page__search-form
-      +search-form
-    p.landing-page__text Лучшие номера для вашей работы, отдыха и просто вдохновения
+  .landing-page__wrapper
+    .landing-page
+      .landing-page__search-form
+        +search-form
+      p.landing-page__text Лучшие номера для вашей работы, отдыха и просто вдохновения
