--- a/src/pages/sign-in/sign-in.scss
+++ b/src/pages/sign-in/sign-in.scss
@@ -4,9 +4,13 @@
   justify-content: center;
   width: 100%;
   max-width: 1920px;
-  margin: 0 auto;
   padding: 172px 20px;
   background: center 54% / cover no-repeat url('../../assets/img/backgrounds/registration-bg.jpg');
+
+  &__wrapper {
+    width: 100%;
+    margin: 0 auto;
+  }
 
   @media (max-width: $phoneWidth) {
     padding: 100px 10px;
