#21 create mock json

--- a/src/pages/search-room/search-room.pug
+++ b/src/pages/search-room/search-room.pug
@@ -10,139 +10,13 @@ block variables
   -
     const title = 'Подбор номеров'
 
-    const cards = [
-      {
-        isLuxury: true,
-        number: 888,
-        price: '9 900₽',
-        star: 5,
-        reviews: 145,
-        images: ['room-1.jpg', 'room-2.jpg', 'room-1.jpg', 'room-2.jpg']
-      },
-      {
-        number: 840,
-        price: '9 900₽',
-        star: 4,
-        reviews: 65,
-        images: ['room-2.jpg', 'room-3.jpg', 'room-2.jpg', 'room-3.jpg']
-      },
-      {
-        isLuxury: true,
-        number: 980,
-        price: '8 500₽',
-        star: 3,
-        reviews: 35,
-        images: ['room-3.jpg', 'room-2.jpg', 'room-3.jpg', 'room-2.jpg']
-      },
-      {
-        number: 856,
-        price: '7 300₽',
-        star: 5,
-        reviews: 19,
-        images: ['room-4.jpg', 'room-3.jpg', 'room-4.jpg', 'room-3.jpg']
-      },
-      {
-        number: 740,
-        price: '6 000₽',
-        star: 4,
-        reviews: 44,
-        images: ['room-5.jpg', 'room-4.jpg', 'room-5.jpg', 'room-4.jpg']
-      },
-      {
-        number: 982,
-        price: '5 800₽',
-        star: 3,
-        reviews: 56,
-        images: ['room-6.jpg', 'room-5.jpg', 'room-6.jpg', 'room-5.jpg']
-      },
-      {
-        number: 678,
-        price: '5 500₽',
-        star: 5,
-        reviews: 45,
-        images: ['room-7.jpg', 'room-6.jpg', 'room-7.jpg', 'room-6.jpg']
-      },
-      {
-        number: 450,
-        price: '5 300₽',
-        star: 4,
-        reviews: 39,
-        images: ['room-8.jpg', 'room-7.jpg', 'room-8.jpg', 'room-7.jpg']
-      },
-      {
-        number: 350,
-        price: '5 000₽',
-        star: 3,
-        reviews: 77,
-        images: ['room-9.jpg', 'room-8.jpg', 'room-9.jpg', 'room-8.jpg']
-      },
-      {
-        number: 666,
-        price: '5 000₽',
-        star: 5,
-        reviews: 25,
-        images: ['room-10.jpg', 'room-9.jpg', 'room-10.jpg', 'room-9.jpg']
-      },
-      {
-        number: 444,
-        price: '5 000₽',
-        star: 3,
-        reviews: 15,
-        images: ['room-11.jpg', 'room-10.jpg', 'room-11.jpg', 'room-10.jpg']
-      },
-      {
-        number: 352,
-        price: '5 000₽',
-        star: 3,
-        reviews: 55,
-        images: ['room-12.jpg', 'room-11.jpg', 'room-12.jpg', 'room-11.jpg']
-      }
-    ]
+    const cards = require('./mock/rooms.json')
+    const checkboxList = require('./mock/checkboxList.json')
+    const guestDropdown = require('./mock/guestDropdown.json')
+    const comfortDropdown = require('./mock/comfortDropdown.json')
+    const checkboxes = require('./mock/checkboxes.json')
+    const richCheckboxes = require('./mock/richCheckboxes.json')
 
-    const checkboxList = [
-      { title: 'Завтрак', name: 'breakfast' },
-      { title: 'Письменный стол', name: 'desk', checked: true },
-      { title: 'Стул для кормления', name: 'food-chair', checked: true },
-      { title: 'Кроватка', name: 'bed', checked: true },
-      { title: 'Телевизор', name: 'tv', },
-      { title: 'Шампунь', name: 'shampoo' }
-    ]
-
-    const guestDropdown = {
-      label: 'гости',
-      items: ['взрослые', 'дети', 'младенцы'],
-      type: 'guests',
-      withButtons: true,
-      placeholder: 'Сколько гостей',
-      name: 'guests-quantity'
-    }
-
-    const comfortDropdown = {
-      label: 'удобства номера',
-      items: ['спальни', 'кровати', 'ванные комнаты'],
-      type: 'rooms',
-      placeholder: 'Удобства',
-      name: 'room-comfort'
-    }
-
-    const checkboxes = [
-      { title: 'Можно курить', name: 'smoke' },
-      { title: 'Можно с питомцами', name: 'pets', checked: true },
-      { title: 'Можно пригласить гостей (до&nbsp;10&nbsp;человек)', name: 'guests', checked: true }
-    ]
-
-    const richCheckboxes = [
-      {
-        title: 'Широкий коридор',
-        description: 'Ширина коридоров в&nbsp;номере не&nbsp;менее 91&nbsp;см.',
-        name: 'wide hall'
-      },
-      {
-        title: 'Помощник для инвалидов',
-        description: 'На&nbsp;1&nbsp;этаже вас встретит специалист и&nbsp;проводит до&nbsp;номера.',
-        name: 'helper'
-      }
-    ]
 block content
   .search-room__wrapper
     .search-room
