--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -32,14 +32,11 @@ block variables
         Выкрикивал комплименты повару&nbsp;&mdash; никто не&nbsp;жаловался из&nbsp;соседей.`
     }
 
-    const checkboxList = [
-      { title: 'Завтрак', name: 'breakfast' },
-      { title: 'Письменный стол', name: 'desk', checked: true },
-      { title: 'Стул для кормления', name: 'food-chair', checked: true },
-      { title: 'Кроватка', name: 'bed', checked: true },
-      { title: 'Телевизор', name: 'tv' },
-      { title: 'Шампунь', name: 'shampoo' }
-    ]
+    const checkboxList = require('./mock/checkboxList.json')
+    const checkboxes = require('./mock/checkboxes.json')
+    const guestDropdown = require('./mock/guestDropdown.json')
+    const comfortDropdown = require('./mock/comfortDropdown.json')
+    const richCheckboxes = require('./mock/richCheckboxes.json')
 
     const aboutRoomItems = [
       { icon: 'insert_emoticon', title: 'Комфорт', text: 'Шумопоглощающие стены' },
@@ -49,40 +46,6 @@ block variables
     const bulletList = ['Нельзя с питомцами',
       'Без вечеринок и мероприятий', 'Время прибытия — после 13:00, а выезд до 12:00']
 
-    const checkboxes = [
-      { title: 'Можно курить', name: 'smoke' },
-      { title: 'Можно с питомцами', name: 'pets', checked: true },
-      { title: 'Можно пригласить гостей (до&nbsp;10&nbsp;человек)', name: 'guests', checked: true }
-    ]
-
-    const guestDropdown = {
-      label: 'dropdown',
-      items: ['взрослые', 'дети', 'младенцы'],
-      type: 'guests',
-      withButtons: true,
-      placeholder: 'Сколько гостей'
-    }
-
-    const comfortDropdown = {
-      label: 'dropdown',
-      items: ['спальни', 'кровати', 'ванные комнаты'],
-      type: 'rooms',
-      placeholder: 'Удобства',
-      name: 'room-comfort'
-    }
-
-    const richCheckboxes = [
-      {
-        title: 'Широкий коридор',
-        description: 'Ширина коридоров в&nbsp;номере не&nbsp;менее 91&nbsp;см.',
-        name: 'wide hall'
-      },
-      {
-        title: 'Помощник для инвалидов',
-        description: 'На&nbsp;1&nbsp;этаже вас встретит специалист и&nbsp;проводит до&nbsp;номера.',
-        name: 'helper'
-      }
-    ]
 block content
   .form-elements
     header.form-elements__header
